# 3d-face-reconstruction

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_submodules.sh  install_dependencies.sh  run_format.sh
cmake_modules/: FindEigen3.cmake  Findspdlog1.cmake
data/: assigned_landmarks.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: NearestNeighbor.h  data_types.h  nanoflann.hpp
src/landmark_detection/: CMakeLists.txt
src/landmark_detection/include/landmark_detection/: face_landmark_detection.h
src/landmark_detection/src/: face_landmark_detection.cpp
src/matching/: CMakeLists.txt
src/matching/dense/: CMakeLists.txt
src/matching/dense/deformation_transfer/: CMakeLists.txt
src/matching/dense/deformation_transfer/include/deformation_transfer/: deformation_transfer.h
src/matching/dense/deformation_transfer/src/: deformation_transfer.cpp
src/matching/dense/deformation_transfer/test/: CMakeLists.txt  deformation_transfer_test.cpp
src/matching/dense/deformation_transform/: CMakeLists.txt
src/matching/dense/deformation_transform/include/deformation_transform/: deformation_transform.h
src/matching/dense/deformation_transform/src/: deformation_transform.cpp
src/matching/dense/face_model/: CMakeLists.txt
src/matching/dense/face_model/include/face_model/: face_model.h  geometry_functor.h
src/matching/dense/face_model/src/: face_model.cpp
src/matching/dense/non_rigid_icp/: CMakeLists.txt
src/matching/dense/non_rigid_icp/include/non_rigid_icp/: non_rigid_icp.h
src/matching/dense/non_rigid_icp/src/: non_rigid_icp.cpp
src/matching/dense/non_rigid_icp/test/: CMakeLists.txt  non_rigid_icp_test.cpp
src/matching/include/sparse/: procrustes.h  sparse_aligner.h
src/matching/sparse/: CMakeLists.txt
src/matching/sparse/include/sparse/: procrustes.h  sparse_aligner.h
src/matching/sparse/src/: procrustes.cpp  sparse_aligner.cpp
src/matching/src/sparse/: sparse_aligner.cpp
src/tracking/: CMakeLists.txt
src/tracking/icp/: CMakeLists.txt
src/tracking/icp/include/icp/: icp.h
src/tracking/icp/src/: icp.cpp
src/utils/: CMakeLists.txt
src/utils/data_reader/: CMakeLists.txt
src/utils/data_reader/include/data_reader/: data_reader.h
src/utils/data_reader/src/: data_reader.cpp
src/utils/video_recorder/: CMakeLists.txt  recorder.cpp
src/utils/visualizer/: CMakeLists.txt  MeshViewerWidget.cc  MeshViewerWidget.hh  MeshViewerWidgetT.hh  MeshViewerWidgetT_impl.hh  QGLViewerWidget.cc  QGLViewerWidget.hh  main.cc
